--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,3 +66,11 @@
 }
 
 
+
+.hide-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
