--- a/src/components/common/style.scss
+++ b/src/components/common/style.scss
@@ -1,80 +1,124 @@
 @import "../../styles/variables.scss";
 
-.new-modal  {
-    top: -30px !important;
-    height: fit-content !important;
+.new-modal {
+  top: 30px !important;
+  height: fit-content !important;
+  position: relative !important;
+  @include breakpoint(mobileonly) {
+    padding: 0 !important;
+    width: 95vw !important;
+    max-width: 100vw !important;
+    height: 100vh !important;
+    bottom: -100px !important;
+    top: 0px !important;
+    margin: 0px 0px 0px 0px !important;
+    margin: 0 auto;
     position: relative !important;
-  
-  
-    @include breakpoint(phablet) {
+  }
+
+  @include breakpoint(phablet) {
+    height: fit-content !important;
+  }
+
+  @media screen and (min-width: 600px) and (max-width: 800px) and (orientation: landscape) {
+    height: 90vh !important;
+  }
+
+  .ant-modal-content {
+    border-radius: 1.5em !important;
+    padding: 30px 20px;
+    // background-color: red;
+    // background-color: $main-901;
+    border: 1px solid $main-200;
+    @include breakpoint(mobileonly) {
+      position: absolute !important;
+      bottom: 0px !important;
+      margin: 0px 0px 0px 0px !important;
+      padding: 5px 0px 5px 5px !important;
+      padding-bottom: 50px !important;
+      margin-bottom: 0px !important;
+      width: 95vw !important;
+      min-width: none !important;
       height: fit-content !important;
+      display: flex !important;
+      align-items: flex-start !important;
+      justify-content: flex-start !important;
+      scrollbar-width: thin !important;
+      &::-webkit-scrollbar {
+        width: 4px !important;
+      }
+      &::-webkit-scrollbar-track {
+        background: $main-200 !important;
+      }
+      &::-webkit-scrollbar-thumb {
+        // background-color: $main-700  !important;
+        border-radius: 6px !important;
+        border: $main-900 !important;
+      }
     }
-  
-    .ant-modal-close {
-      width: 100%;
-      border-radius: 100%;
-      position: absolute;
-      top: 10px;
-      z-index: 10 !important;
-      text-align: center;
-      @include rowflex(center, center);
-  
+
+    @media screen and (min-width: 600px) and (max-width: 800px) and (orientation: landscape) {
+      height: 90vh !important;
+    }
+  }
+  .ant-modal-close {
+    // width: 100%;
+    border-radius: 100%;
+    position: absolute;
+    top: 0px !important;
+    // left: 0;
+    right: -60px;
+    z-index: 10 !important;
+    text-align: center;
+    margin: 0 auto !important;
+    width: 50px !important;
+    height: 50px !important;
+    @include rowflex(center, center);
+
+    @include breakpoint(desktop) {
+      width: fit-content;
+      @include rowflexx(flex-start);
+    }
+  }
+  .ant-modal-body {
+    width: 100% !important;
+    .backcontinue.--bctop {
+      margin-top: 0px;
       @include breakpoint(mobileonly) {
-        width: 10%;
-        @include rowflexx(flex-start);
+        margin-top: 80px;
       }
-      @include breakpoint(phablet) {
-        width: 6%;
-        @include rowflexx(flex-start);
-      }
-  
-      @include breakpoint(desktop) {
-        width: fit-content;
-        @include rowflexx(flex-start);
-      }
-    }
-    .ant-modal-body {
-      background-color: white;
-      border-radius: 12px;
-      width: 100%;
-      .backcontinue.--bctop {
-        margin-top: 0px;
+      .backcontinue {
         @include breakpoint(mobileonly) {
-          margin-top: 80px;
-          position: relative;
-        }
-        .backcontinue {
-          @include breakpoint(mobileonly) {
-            background-color: white;
-            position: absolute;
-            bottom: 20px;
+          background-color: white;
+          position: absolute;
+          bottom: 20px;
+          margin: 0 auto;
+          width: 90%;
+          height: 120px;
+          left: 0px;
+          right: 0px;
+          button {
             margin: 0 auto;
-            width: 100%;
-            height: 120px;
-            left: 0px;
-            right: 0px;
-            button {
-              margin: 0 auto;
-              // margin-left: 10px;
-              width: 100%;
-            }
+            margin-left: 10px;
+            width: 90%;
           }
         }
       }
-  
-      @include breakpoint(mobileonly) {
-        // height: 90vh !important;
-        overflow-y: scroll;
-        overflow-x: hidden;
-        padding: 10px !important;
-      }
-    }
-    .ant-modal-close-x {
-      position: absolute;
-      //    right: 50%;
-      // @include rowflex(center, center);
-      // width: 60px;
-      // height: 60px;
-      // border-radius: 100%;
     }
   }
+  .ant-modal-close-x {
+    background-color: $main-100 !important;
+    border: 1px solid $main-300;
+    @include rowflex(center, center);
+    width: 50px !important;
+    height: 50px !important;
+    border-radius: 100%;
+
+    span {
+      svg {
+        // color: #fff;
+        height: 50px;
+      }
+    }
+  }
+}
